# darli

./: .gitignore  .pre-commit-config.yaml  environment.yml  pyproject.toml
.github/workflows/: build.yml
darli/backend/: __init__.py  _base.py  _casadi.py  _pinocchio.py  _structs.py
darli/backend/liecasadi/: so3.py
darli/model/: __init__.py  _base.py  _body.py  _model.py
darli/model/jaxfunctional/: __init__.py  _model.py
darli/parametric/_parameters/: _parameters.py
darli/robots/: _robots.py
darli/state_space/: _common.py
darli/state_space/_state/: _state.py  _tangent.py
darli/state_space/integrators/: _mid_point.py  _rk4.py
darli/utils/manifolds/: __manifold.py  __se3.py  __spd.py  __vector.py
tests/: test_backend.py  test_model.py
tutorial/: 00_intro.ipynb  01_model.ipynb  02_state_space.ipynb  03_functional.ipynb  04_parametric.ipynb
