[project]
name = "darli"
description = "The DARLi is a Python 3 library that supports numerical and symbolical computations of open loop articulated robots provided urdf file."
version = "0.5.0"
authors = [{ name = "Lev Kozlov" }, { name = "Simeon Nedelchev" }]
dependencies = ["pytest>=8.3.2,<9", "robot-descriptions>=1.12.0,<2", "mujoco>=3.2.2,<4", "pytest-cov>=5.0.0,<6"]
readme = "README.md"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pre-commit"]


[project.urls]
homepage = "https://github.com/simeon-ned/darli"
repository = "https://github.com/simeon-ned/darli.git"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "darli",
    "darli.robots",
    "darli.backend",
    "darli.backend.liecasadi",
    "darli.backend.liecasadi.hints",
    "darli.model",
    "darli.model.functional",
    "darli.state_space",
    "darli.state_space.integrators",
    "darli.parametric",
    "darli.utils.arrays",
    "darli.utils.quaternions",
]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
darli = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pinocchio = ">=3.1.0,<4"
